2004-04-03  Borut Razem  <borut.razem@siol.net>
	* src/stimuli.cc: fixed warning C4715: 'IOPIN::get_iop' : not all
	control paths return a value: IOPIN::get_iop() returns 0 in case that
	iopp and iop are NULL

2004-04-01 Scott Dattalo  <scott@dattalo.com>
	* modules/resistor.cc, modules/resitor.h: Several member functions
	in the resistor classes were declared, but not defined anywhere.
	* src/pic-instructions.h, src/breakpoints.h, src/breakpoints.cc:
	adding assertions to the simulator.
	* src/processor.cc, src/processor.h, gui/gui_src_asm.cc: Source
	browser windows can now get a unique name.
	
2004-03-30 Scott Dattalo  <scott@dattalo.com>
	* numeous files throughout gpsim: The Module class now uses 
	a string type instead of a 'char *' for the module name. Also,
	the gui x and y coordinate were removed from the module class (I
	still want to remove the 'widget' member too).
	* modules/usart.cc: calls to the old gpsim api were still lingering
	around here.
	* gui/gui_src_asm.cc, gui/gui_src.h, src/processor.h: more browser
	splitting stuff.

2004-03-29  Borut Razem  <borut.razem@siol.net>
	* src/modules.cc: support of external modules on WIN32

2004-03-25 Scott Dattalo  <scott@dattalo.com>
	* gui/gui_src_asm.cc: Now we can load hex files again.

2004-03-25  Bert Driehuis <driehuis@playbeing.org>
	* extras/lcd/lcdengine.cc, extras/lcd/lcdengine.cc,
	extras/lcd/lcd.h, extras/lcd/lcdgui.cc, extras/lcd/examples/lcd.asm:
	Added support for CGRAM in the LCD module.

2004-03-25 Scott Dattalo  <scott@dattalo.com>
	* src/processor.h, src/processor.cc: Added pma_context list
	* gui/Makefile.am: Recently added .h files are now in the Makefile
	* gui/gui_src.h, gui/gui_src_asm.cc: Multiple source browsers are
	now created based on the number of pma_contexts
	* gui/gui_object.h, gui/gui_src_asm.cc, gui/gui_breadboard.cc,
	gui/gui_main.cc, gui/gui_profile.cc, gui/gui_regwin.cc,
	gui/gui_scope.cc, gui/gui_src.cc, gui/gui_src_opcode.cc,